fix: edgeai image

--- a/transport.html
+++ b/transport.html
@@ -200,7 +200,7 @@
 
     <!-- Εικόνα (16:9) -->
     <div class="hero-wrap">
-      <img class="hero-image hero-ratio hero-rounded" src="assets/edgeai-flow.jpg" alt="EdgeAI demo">
+      <img class="hero-image hero-ratio hero-rounded" src="assets/edgeai-flow.drawio.jpg" alt="EdgeAI demo">
     </div>
   </div>
 
