--- a/energy.html
+++ b/energy.html
@@ -164,7 +164,7 @@
 
     <!-- Εικόνα (16:9) -->
     <div class="hero-wrap">
-      <img class="hero-image hero-ratio hero-rounded" src="assets/powerizeD.png" alt="POWERIZED demo">
+      <img class="hero-image hero-ratio hero-rounded" src="assets/powerizeD_flow.png" alt="POWERIZED demo">
     </div>
   </div>
 
