add: text powerizeD

--- a/energy.html
+++ b/energy.html
@@ -161,6 +161,13 @@
         <h2 class="section-title h3">Mοντέλο Eκτίμησης Eνέργειας</h2>
       </div>
     </div>
+    <!-- Αριστερά: περιγραφή -->
+    <div class="col-md-7">
+      <p class="lead-compact">
+      Με την χρήση του προσομοιωτή CARLA, η μελέτη συγκρίνει τον κλασικό Α* και έναν Υβριδικό Γενετικό Αλγόριθμο (HGA) σε διαφορετικά σενάρια, 
+      και συνδυάζει μοντέλο εκτίμησης ενέργειας βασιζόμενο στην γνώση του μονοπατιού για την αξιολόγηση της αποδοτικότητας των PPAs. 
+      </p>
+    </div>
 
     <!-- Εικόνα (16:9) -->
     <div class="hero-wrap">
