add:equal horizontal margin

--- a/energy.html
+++ b/energy.html
@@ -109,6 +109,8 @@
     .lead-compact{margin:.25rem 0;color:#4a4f57}
     .lead-compact strong{color:#212529}
 
+    .horiz-compact{margin:.25rem 2rem; color:#4a4f57;}
+
     /* Κάτω εικόνα */
     .hero-image{width:100%;height:auto;display:block}
     .hero-wrap{overflow:hidden}
@@ -162,7 +164,7 @@
       </div>
     </div>
     <!-- Αριστερά: περιγραφή -->
-    <p class="lead-compact">
+    <p class="horiz-compact">
     Με την χρήση του προσομοιωτή CARLA, η μελέτη συγκρίνει τον κλασικό Α* και έναν Υβριδικό Γενετικό Αλγόριθμο (HGA) σε διαφορετικά σενάρια, 
     και συνδυάζει μοντέλο εκτίμησης ενέργειας βασιζόμενο στην γνώση του μονοπατιού για την αξιολόγηση της αποδοτικότητας των PPAs. 
     </p>
