add:Researcher's night Logo

--- a/energy.html
+++ b/energy.html
@@ -134,10 +134,9 @@
       <img src="assets/HUA_Logo.png" alt="Harokopio University" class="brand-logo">
     </a>
 
-    <!-- Αρχική (στο κέντρο) -->
-    <a href="index.html" class="text-decoration-none fw-semibold px-3 py-1 rounded-pill border"
-       style="border-color: rgba(0,0,0,.12); color:#0d6efd; background:rgba(13,110,253,.06);">
-      Αρχική
+    <!-- Logo 2 (external site in the middle) -->
+    <a href="https://researchersnight.gr/en/home-page-en/" class="brand-logo-link" target="_blank" aria-label="External Site">
+      <img src="assets/24097.jpeg" alt="External Site Logo" class="brand-logo">
     </a>
 
     <!-- Logo 2 -->
