--- a/energy.html
+++ b/energy.html
@@ -11,7 +11,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
   <style>
-      <link rel="stylesheet" href="assets/css/global.css"> 
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="assets/css/global.css?v=1"> 
   </style>
 
 </head>
