--- a/energy.html
+++ b/energy.html
@@ -12,7 +12,7 @@
 
   <style>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-      <link rel="stylesheet" href="assets/css/global.css?v=1"> 
+      <link rel="stylesheet" href="./assets/css/global.css?v=1"> 
   </style>
 
 </head>
