--- a/transport.html
+++ b/transport.html
@@ -11,116 +11,8 @@
   <!-- Bootstrap Icons (για όμορφα bullets) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
-  <style>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    
-    :root {
-      --card-radius: 1.25rem;
-    }
-    body { background: radial-gradient(1200px 800px at 10% 0%, #f6f9ff, #ffffff); }
+  <link rel="stylesheet" href="./assets/css/global.css?v=1"> 
 
-    .category-card {
-      position: relative;
-      border: 0;
-      border-radius: var(--card-radius);
-      overflow: hidden;
-      box-shadow: 0 8px 24px rgba(0,0,0,.08);
-      transition: transform .25s ease, box-shadow .25s ease;
-      min-height: 320px;
-      background: #0d1b2a;
-      color: #fff;
-    }
-    .category-card:hover { transform: translateY(-6px); box-shadow: 0 16px 48px rgba(0,0,0,.16); }
-
-    .category-media { position: absolute; inset: 0; }
-    .category-media img { width: 100%; height: 100%; object-fit: cover; filter: brightness(.65) saturate(1.1); }
-
-    .category-overlay { position: absolute; inset: 0; background: linear-gradient(180deg, rgba(0,0,0,0.15) 0%, rgba(0,0,0,0.6) 100%); }
-
-    .category-content { position: relative; z-index: 2; padding: 1.25rem; height: 100%; display: grid; grid-template-rows: auto 1fr auto; }
-
-    .category-icon {
-      width: 56px; height: 56px; border-radius: 50%;
-      display: grid; place-items: center; backdrop-filter: blur(4px);
-      background: rgba(255,255,255,.18); border: 1px solid rgba(255,255,255,.3);
-      box-shadow: inset 0 0 0 1px rgba(0,0,0,.08);
-    }
-
-    .category-title { font-weight: 700; line-height: 1.15; margin: .75rem 0 .25rem; }
-    .category-desc { color: rgba(255,255,255,.92); font-size: .98rem; }
-
-    .badge-glass { background: rgba(255,255,255,.18); color:#fff; border: 1px solid rgba(255,255,255,.28); }
-
-    .stretched-link::after{ border-radius: var(--card-radius); }
-
-    /* Responsive spacing tweak */
-    @media (min-width: 992px){
-      .category-title { font-size: 1.1rem; }
-    }
-      /* Brand logos bar */
-    .brandbar { background: transparent; }
-    .brand-logo { height: 100px; width: auto; max-width: 420px; object-fit: contain; image-rendering: -webkit-optimize-contrast; }
-    @media (max-width: 576px){ .brand-logo { height: 72px; } }
-  
-    :root{
-      /* Ρύθμισε εδώ το μέγεθος logo */
-      --radius: 1.25rem;
-      --logo-size: 120px;    /* ύψος του “pill” */
-      --logo-img: 82px;      /* πραγματικό μέγεθος εικόνας */
-    }
-
-    body{background:radial-gradient(1200px 800px at 10% 0%, #f6f9ff, #ffffff)}
-    .section-card{border:0;border-radius:var(--radius);background:#fff;box-shadow:0 12px 36px rgba(0,0,0,.08);overflow:hidden;margin-bottom:2rem}
-    .section-inner{padding:2rem 2rem 1.25rem}
-    .section-header{display:flex;flex-direction:column;align-items:flex-start;gap:.85rem;border-bottom:1px solid rgba(0,0,0,.06);padding-bottom:1rem;margin-bottom:1.25rem}
-
-    .logo-pill{
-      display:inline-flex;align-items:center;gap:1rem;
-      min-height:var(--logo-size); padding:.6rem 1.1rem .6rem .6rem;
-      border-radius:999px; color:#fff;
-      background:linear-gradient(135deg,#0d6efd 0%,#5aa2ff 100%);
-      box-shadow:0 14px 24px rgba(13,110,253,.25)
-    }
-    .logo-pill img{
-      width:var(--logo-img);height:var(--logo-img);
-      border-radius:50%; background:#fff; padding:6px; object-fit:contain
-    }
-    .logo-pill strong{font-size:1.15rem;letter-spacing:.2px}
-
-    .logo-pill.green{background:linear-gradient(135deg,#198754 0%,#46c08a 100%)}
-
-    .section-title{font-weight:800;margin:0}
-    .kicker{font-size:.9rem; letter-spacing:.25px; color:#6c757d}
-
-    /* Δεξιά στήλη: όμορφα bullets */
-    .feature-list{list-style:none;margin:0;padding:0}
-    .feature-list li{
-      display:flex; align-items:flex-start; gap:.6rem;
-      padding:.5rem .25rem; border-bottom:1px dashed rgba(0,0,0,.06)
-    }
-    .feature-list li:last-child{border-bottom:0}
-    .feature-list i{
-      font-size:1.05rem; flex:0 0 auto;
-      /* “παστέλ” χρώμα εικονιδίου */
-      color:#0d6efd
-    }
-    .feature-list .text{line-height:1.35}
-
-    /* Αριστερή στήλη: πιο στιβαρή τυπογραφία */
-    .lead-compact{margin:.25rem 0;color:#4a4f57}
-    .lead-compact strong{color:#212529}
-
-    /* Κάτω εικόνα */
-    .hero-image{width:100%;height:auto;display:block}
-    .hero-wrap{overflow:hidden}
-    .hero-ratio{aspect-ratio: 16 / 9;} /* κρατά ίδια αναλογία χωρίς να παραμορφώνει */
-    .hero-rounded{border-radius:0 0 var(--radius) var(--radius)}
-
-    @media (max-width:575.98px){
-      :root{ --logo-size: 110px; --logo-img: 70px; }
-      .section-inner{padding:1.25rem 1.25rem .75rem}
-    }
-  </style>
 </head>
 <body>
 
