--- a/energy.html
+++ b/energy.html
@@ -100,6 +100,44 @@
     </div>
   </div>
   
+  <!-- SECTION 3: Archimedes -->
+  <div class="section-card">
+    <div class="section-inner">
+      <div class="section-header">
+        <span class="logo-pill">
+          <img src="assets/archiemedes.png" alt="Archimedes">
+          <div class="d-flex flex-column">
+            <strong>Archimedes</strong>
+          </div>
+        </span>
+        <h2 class="section-title h3">Εύρεση Καλύτερου Μονοπατιού με Βάση την Ενέργεια</h2>
+      </div>
+
+      <div class="row g-4 align-items-start">
+        <div class="col-md-7">
+          <p class="lead-compact"><strong>Στόχος:</strong> πολιτική οδήγησης από expert demonstrations.</p>
+          <p class="lead-compact"><strong>Ροή:</strong> συλλογή trajectories → εκπαίδευση → αξιολόγηση.</p>
+          <p class="lead-compact"><strong>Εργαλεία:</strong> CARLA, PyTorch, ROS 2 integration.</p>
+          <p class="lead-compact"><strong>Χρήσεις:</strong> tele-ops, μικροκινητικότητα, city logistics.</p>
+        </div>
+        <div class="col-md-5">
+          <ul class="feature-list">
+            <li><i class="bi bi-diagram-3"></i><div class="text">Policy distillation & safety gating</div></li>
+            <li><i class="bi bi-collection-play"></i><div class="text">Offline/online dataset με controls & video</div></li>
+            <li><i class="bi bi-shield-check"></i><div class="text">Fail-safes & monitoring για παραγωγή</div></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="hero-wrap">
+      <img class="hero-image hero-ratio hero-rounded" src="assets/bc-hero.jpg" alt="CoDrones demo">
+    </div>
+  </div>
+
+
+
+
 
 </div>
 
