change:Color Archimedes energy

--- a/energy.html
+++ b/energy.html
@@ -104,7 +104,7 @@
   <div class="section-card">
     <div class="section-inner">
       <div class="section-header">
-        <span class="logo-pill">
+        <span class="logo-pill.green">
           <img src="assets/archiemedes.png" alt="Archimedes">
           <div class="d-flex flex-column">
             <strong>Archimedes</strong>
