--- a/index.html
+++ b/index.html
@@ -8,56 +8,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/global.css?v=1"> 
 
-
-  <!-- <style> -->
-  <!--   :root { -->
-  <!--     --card-radius: 1.25rem; -->
-  <!--   } -->
-  <!--   body { background: radial-gradient(1200px 800px at 10% 0%, #f6f9ff, #ffffff); } -->
-  <!---->
-  <!--   .category-card { -->
-  <!--     position: relative; -->
-  <!--     border: 0; -->
-  <!--     border-radius: var(--card-radius); -->
-  <!--     overflow: hidden; -->
-  <!--     box-shadow: 0 8px 24px rgba(0,0,0,.08); -->
-  <!--     transition: transform .25s ease, box-shadow .25s ease; -->
-  <!--     min-height: 320px; -->
-  <!--     background: #0d1b2a; -->
-  <!--     color: #fff; -->
-  <!--   } -->
-  <!--   .category-card:hover { transform: translateY(-6px); box-shadow: 0 16px 48px rgba(0,0,0,.16); } -->
-  <!---->
-  <!--   .category-media { position: absolute; inset: 0; } -->
-  <!--   .category-media img { width: 100%; height: 100%; object-fit: cover; filter: brightness(.65) saturate(1.1); } -->
-  <!---->
-  <!--   .category-overlay { position: absolute; inset: 0; background: linear-gradient(180deg, rgba(0,0,0,0.15) 0%, rgba(0,0,0,0.6) 100%); } -->
-  <!---->
-  <!--   .category-content { position: relative; z-index: 2; padding: 1.25rem; height: 100%; display: grid; grid-template-rows: auto 1fr auto; } -->
-  <!---->
-  <!--   .category-icon { -->
-  <!--     width: 56px; height: 56px; border-radius: 50%; -->
-  <!--     display: grid; place-items: center; backdrop-filter: blur(4px); -->
-  <!--     background: rgba(255,255,255,.18); border: 1px solid rgba(255,255,255,.3); -->
-  <!--     box-shadow: inset 0 0 0 1px rgba(0,0,0,.08); -->
-  <!--   } -->
-  <!---->
-  <!--   .category-title { font-weight: 700; line-height: 1.15; margin: .75rem 0 .25rem; } -->
-  <!--   .category-desc { color: rgba(255,255,255,.92); font-size: .98rem; } -->
-  <!---->
-  <!--   .badge-glass { background: rgba(255,255,255,.18); color:#fff; border: 1px solid rgba(255,255,255,.28); } -->
-  <!---->
-  <!--   .stretched-link::after{ border-radius: var(--card-radius); } -->
-  <!---->
-  <!--   /* Responsive spacing tweak */ -->
-  <!--   @media (min-width: 992px){ -->
-  <!--     .category-title { font-size: 1.1rem; } -->
-  <!--   } -->
-  <!--     /* Brand logos bar */ -->
-  <!--   .brandbar { background: transparent; } -->
-  <!--   .brand-logo { height: 100px; width: auto; max-width: 420px; object-fit: contain; image-rendering: -webkit-optimize-contrast; } -->
-  <!--   @media (max-width: 576px){ .brand-logo { height: 72px; } } -->
-  <!-- </style> -->
 </head>
 <body>
 
@@ -67,6 +17,12 @@
       <a href="#" class="brand-logo-link" aria-label="Λογότυπο #1">
         <img src="assets/HUA_Logo.png" alt="Λογότυπο 1" class="brand-logo">
       </a>
+
+     <!-- Logo 2 (external site in the middle) -->
+     <a href="https://researchersnight.gr/en/home-page-en/" class="brand-logo-link" target="_blank" aria-label="External Site">
+      <img src="assets/24097.jpeg" alt="External Site Logo" class="brand-logo">
+     </a>
+
       <a href="#" class="brand-logo-link" aria-label="Λογότυπο #2">
         <img src="assets/icsa-logo.png" alt="Λογότυπο 2" class="brand-logo">
       </a>
