add: LoRa at telecommunications

--- a/telecom.html
+++ b/telecom.html
@@ -38,7 +38,7 @@
 </div>
 <div class="container py-5">
 
-<!-- SECTION 2: Shape Future -->
+<!-- SECTION 1: CoDrones -->
   <div class="section-card">
     <div class="section-inner">
       <div class="section-header">
@@ -73,6 +73,41 @@
     </div>
   </div>
   
+  <!-- SECTION 2: EDGEAI - LoRa -->
+  <div class="section-card">
+    <div class="section-inner">
+      <div class="section-header">
+        <span class="logo-pill">
+          <img src="assets/edgeai-logo.png" alt="EdgeAI logo">
+          <div class="d-flex flex-column">
+            <strong>EdgeAI</strong>
+          </div>
+        </span>
+        <h2 class="section-title h3">Εύρεση Καλύτερου Μονοπατιού με Βάση την Ενέργεια</h2>
+      </div>
+
+      <div class="row g-4 align-items-start">
+        <div class="col-md-7">
+          <p class="lead-compact"><strong>Στόχος:</strong> LoRaWAN σύστημα διαχειρισης έκτρκτης ανάγκης για δίκτυα οχημάτων.</p>
+          <p class="lead-compact"><strong>Ροή:</strong> εντοπισμός και ειδοποίηση μέσω ευρείας διάδοσης για προειδοποίηση των οχημάτων.</p>
+          <p class="lead-compact"><strong>Εργαλεία:</strong> NS3, SUMO simulations, OSMWebWizard. </p>
+          <p class="lead-compact"><strong>Διαχείριση Πόρων</strong> Στρατηγικές κατανομής πόρων (InitSF, Geocasting, ADR) για βελτιστοποίηση απόδοσης. </p>
+        </div>
+        <div class="col-md-5">
+          <ul class="feature-list">
+            <li><i class="bi bi-diagram-3"></i><div class="text">oRaWAN System Architecture – Gateway, LoRa Network Server, edge sensors, and vehicles (Class A & C devices)</div></li>
+            <li><i class="bi bi-collection-play"></i><div class="text">Resource Allocation Mechanisms – Initial Spreading Factor assignment (InitSF), Geocasting model, ADR</div></li>
+            <li><i class="bi bi-shield-check"></i><div class="text">Simulation & Evaluation</div></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="hero-wrap">
+      <img class="hero-image hero-ratio hero-rounded" src="assets/LoRa.png" alt="LoRa">
+    </div>
+  </div>
+
 
 </div>
 
