--- a/transport.html
+++ b/transport.html
@@ -149,9 +149,8 @@
     </div>
   </div>
 
-  <!-- Εικόνα (16:9, ίδια εμφάνιση με τα άλλα sections) -->
   <div class="hero-wrap">
-    <img class="hero-image hero-ratio hero-rounded" src="assets/ecomobility.png" alt="Behavior Cloning demo">
+    <img class="hero-image" src="assets/ecomobility.png" alt="Behavior Cloning demo">
   </div>
 </div>
 
