--- a/telecom.html
+++ b/telecom.html
@@ -42,19 +42,15 @@
   <div class="section-card">
     <div class="section-inner">
       <div class="section-header">
+      <div class="d-flex flex-wrap align-items-center gap-2">
         <span class="logo-pill">
           <img src="assets/codrones.png" alt="CoDrones">
-          <div class="d-flex flex-column">
-            <strong>CoDrones</strong>
-          </div>
+          <div class="d-flex flex-column"><strong>CoDrones</strong></div>
         </span>
         <span class="logo-pill">
           <img src="assets/edgeai-logo.png" alt="EdgeAI logo">
-          <div class="d-flex flex-column">
-            <strong>EdgeAI</strong>
-          </div>
+          <div class="d-flex flex-column"><strong>EdgeAI</strong></div>
         </span>
-        <h2 class="section-title h3">Εύρεση Καλύτερου Μονοπατιού με Βάση την Ενέργεια</h2>
       </div>
 
      <div class="row g-4 align-items-start">
