--- a/telecom.html
+++ b/telecom.html
@@ -55,7 +55,7 @@
 
      <div class="row g-4 align-items-start">
         <div class="col-md-7">
-          <p class="lead-compact"><strong>Στόχος:</strong> LoRaWAN σύστημα διαχειρισης έκτρκτης ανάγκης για δίκτυα οχημάτων.</p>
+          <p class="lead-compact"><strong>Στόχος:</strong> LoRaWAN σύστημα διαχειρισης έκτακτης ανάγκης για δίκτυα οχημάτων.</p>
           <p class="lead-compact"><strong>Ροή:</strong> εντοπισμός και ειδοποίηση μέσω ευρείας διάδοσης για προειδοποίηση των οχημάτων.</p>
           <p class="lead-compact"><strong>Εργαλεία:</strong> NS3, SUMO simulations, OSMWebWizard. </p>
           <p class="lead-compact"><strong>Διαχείριση Πόρων</strong> Στρατηγικές κατανομής πόρων (InitSF, Geocasting, ADR) για βελτιστοποίηση απόδοσης. </p>
