--- a/telecom.html
+++ b/telecom.html
@@ -62,7 +62,7 @@
         </div>
         <div class="col-md-5">
           <ul class="feature-list">
-            <li><i class="bi bi-diagram-3"></i><div class="text">oRaWAN System Architecture – Gateway, LoRa Network Server, edge sensors, and vehicles (Class A & C devices)</div></li>
+            <li><i class="bi bi-diagram-3"></i><div class="text">LoRaWAN System Architecture – Gateway, LoRa Network Server, edge sensors, and vehicles (Class A & C devices)</div></li>
             <li><i class="bi bi-collection-play"></i><div class="text">Resource Allocation Mechanisms – Initial Spreading Factor assignment (InitSF), Geocasting model, ADR</div></li>
             <li><i class="bi bi-shield-check"></i><div class="text">Simulation & Evaluation</div></li>
           </ul>
