--- a/energy.html
+++ b/energy.html
@@ -61,7 +61,7 @@
 
     <!-- Εικόνα (16:9) -->
     <div class="hero-wrap">
-      <img class="hero-image hero-ratio hero-rounded" src="assets/powerizeD_flow.png" alt="POWERIZED demo">
+      <img class="hero-image" src="assets/powerizeD_flow.png" alt="POWERIZED demo">
     </div>
   </div>
 
