--- a/telecom.html
+++ b/telecom.html
@@ -51,6 +51,7 @@
           <img src="assets/edgeai-logo.png" alt="EdgeAI logo">
           <div class="d-flex flex-column"><strong>EdgeAI</strong></div>
         </span>
+        <h2 class="section-title h3"> Επικοινωνία μεταξύ Σμήνους από Drones για Ανίχνευση & Προειδοποίηση για Κρίσιμες Καταστάσεις</h2>
       </div>
 
      <div class="row g-4 align-items-start">
