--- a/energy.html
+++ b/energy.html
@@ -65,7 +65,7 @@
     </div>
   </div>
 
-<!-- SECTION 2: Shape Future -->
+<!-- SECTION 2: CoDrones -->
   <div class="section-card">
     <div class="section-inner">
       <div class="section-header">
@@ -78,25 +78,10 @@
         <h2 class="section-title h3">Εύρεση Καλύτερου Μονοπατιού με Βάση την Ενέργεια</h2>
       </div>
 
-      <div class="row g-4 align-items-start">
-        <div class="col-md-7">
-          <p class="lead-compact"><strong>Στόχος:</strong> πολιτική οδήγησης από expert demonstrations.</p>
-          <p class="lead-compact"><strong>Ροή:</strong> συλλογή trajectories → εκπαίδευση → αξιολόγηση.</p>
-          <p class="lead-compact"><strong>Εργαλεία:</strong> CARLA, PyTorch, ROS 2 integration.</p>
-          <p class="lead-compact"><strong>Χρήσεις:</strong> tele-ops, μικροκινητικότητα, city logistics.</p>
-        </div>
-        <div class="col-md-5">
-          <ul class="feature-list">
-            <li><i class="bi bi-diagram-3"></i><div class="text">Policy distillation & safety gating</div></li>
-            <li><i class="bi bi-collection-play"></i><div class="text">Offline/online dataset με controls & video</div></li>
-            <li><i class="bi bi-shield-check"></i><div class="text">Fail-safes & monitoring για παραγωγή</div></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+      <img class="hero-image hero-ratio hero-rounded" src="assets/coDrones_framework.jpg" alt="CoDrones demo">
 
     <div class="hero-wrap">
-      <img class="hero-image hero-ratio hero-rounded" src="assets/bc-hero.jpg" alt="CoDrones demo">
+      <img class="hero-image hero-ratio hero-rounded" src="assets/coDrones_framework.jpg" alt="CoDrones demo">
     </div>
   </div>
   
