--- a/energy.html
+++ b/energy.html
@@ -79,7 +79,7 @@
       </div>
 
     <div class="hero-wrap">
-      <img class="hero-image hero-ratio hero-rounded" src="assets/coDrones_framework.jpg" alt="CoDrones demo">
+      <img class="hero-image hero-ratio hero-rounded" src="assets/coDrones_framework.png" alt="CoDrones demo">
     </div>
   </div>
   
