--- a/energy.html
+++ b/energy.html
@@ -77,6 +77,52 @@
         </span>
         <h2 class="section-title h3">Εύρεση Καλύτερου Μονοπατιού με Βάση την Ενέργεια</h2>
       </div>
+ <div class="row g-4 align-items-start">
+      <!-- Αριστερά: σύντομη περιγραφή -->
+      <div class="col-md-7">
+        <p class="lead-compact">
+          Σχεδιάζουμε διαδρομές UAV με κριτήριο το ενεργειακό κόστος, συνδυάζοντας μοντέλο ενέργειας πτήσης με επιχειρησιακούς περιορισμούς.
+          Το περιβάλλον ορίζεται από τις συντεταγμένες της περιοχής και παραμέτρους ατμόσφαιρας/οχήματος.
+          Έπειτα ορίζονται μεταβλητές απόφασης και συναρτήσεις στόχου και γίνεται βελτιστοποίηση με αλγορίθμους αναζήτησης.
+          Το αποτέλεσμα είναι συντονισμένο πλάνο διαδρομής και εκτίμηση υπολειπόμενης ενέργειας.
+        </p>
+      </div>
+
+      <!-- Δεξιά: bullets -->
+      <div class="col-md-5">
+        <ul class="feature-list">
+          <li>
+            <i class="bi bi-battery-charging"></i>
+            <div class="text">
+              <strong>Μοντέλο Ενέργειας:</strong> αεροδυναμική αντίσταση (profile drag), κινητικότητα, προδιαγραφές UAV,
+              λειτουργίες σταθμών βάσης χαμηλού ύψους, πυκνότητα αέρα, βαρυτικό δυναμικό.
+            </div>
+          </li>
+          <li>
+            <i class="bi bi-sliders"></i>
+            <div class="text">
+              <strong>Περιορισμοί:</strong> είσοδοι/έξοδοι, ενέργεια διαδρομής, συγχρονισμός χρόνου,
+              αποφυγή συγκρούσεων, επιτρεπόμενες/απαιτούμενες επισκέψεις.
+            </div>
+          </li>
+          <li>
+            <i class="bi bi-diagram-3"></i>
+            <div class="text">
+              <strong>Βελτιστοποίηση:</strong> περιφερειοποίηση (ομαδοποίηση βάσει ενέργειας) →
+              γενετικός αλγόριθμος (δυναμική κίνηση CUE) →
+              προτεραιοποίηση με TOPSIS.
+            </div>
+          </li>
+          <li>
+            <i class="bi bi-flag-checkered"></i>
+            <div class="text">
+              <strong>Έξοδοι:</strong> Συντονισμένο Πλάνο Διαδρομής & Υπολειπόμενη Ενέργεια.
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
     <div class="hero-wrap">
       <img class="hero-image hero-ratio hero-rounded" src="assets/coDrones_framework.png" alt="CoDrones demo">
