--- a/energy.html
+++ b/energy.html
@@ -139,28 +139,44 @@
             <strong>Archimedes</strong>
           </div>
         </span>
-        <h2 class="section-title h3">Εύρεση Καλύτερου Μονοπατιού με Βάση την Ενέργεια</h2>
+        <h2 class="section-title h3">Ανίχνευση Πυρκαγιάς σε Τούνελ – Κρίσιμη Υποδομή</h2>
       </div>
 
-      <div class="row g-4 align-items-start">
-        <div class="col-md-7">
-          <p class="lead-compact"><strong>Στόχος:</strong> πολιτική οδήγησης από expert demonstrations.</p>
-          <p class="lead-compact"><strong>Ροή:</strong> συλλογή trajectories → εκπαίδευση → αξιολόγηση.</p>
-          <p class="lead-compact"><strong>Εργαλεία:</strong> CARLA, PyTorch, ROS 2 integration.</p>
-          <p class="lead-compact"><strong>Χρήσεις:</strong> tele-ops, μικροκινητικότητα, city logistics.</p>
-        </div>
-        <div class="col-md-5">
-          <ul class="feature-list">
-            <li><i class="bi bi-diagram-3"></i><div class="text">Policy distillation & safety gating</div></li>
-            <li><i class="bi bi-collection-play"></i><div class="text">Offline/online dataset με controls & video</div></li>
-            <li><i class="bi bi-shield-check"></i><div class="text">Fail-safes & monitoring για παραγωγή</div></li>
-          </ul>
-        </div>
+<div class="row g-4 align-items-start">
+      <!-- Αριστερά: περιγραφή -->
+      <div class="col-md-7">
+        <p class="lead-compact">
+          Το Fire Alert Detection εφαρμόζεται σε σενάρια κρίσιμων υποδομών, όπως σήραγγες μεταφορών,
+          όπου η έγκαιρη ανίχνευση πυρκαγιάς είναι ζωτικής σημασίας για την ασφάλεια.
+          Η διαδικασία βασίζεται σε προ-επεξεργασία εικόνας και monitoring, με τελικό στάδιο την παραγωγή ειδοποίησης μέσω LLM.
+          Έτσι εξασφαλίζεται ταχύτερη αντίδραση και καλύτερη προστασία της υποδομής και των χρηστών.
+        </p>
       </div>
-    </div>
+
+      <!-- Δεξιά: bullets -->
+      <div class="col-md-5">
+        <ul class="feature-list">
+          <li>
+            <i class="bi bi-building"></i>
+            <div class="text"><strong>Περιβάλλον εφαρμογής:</strong> σήραγγες / κρίσιμες υποδομές μεταφορών.</div>
+          </li>
+          <li>
+            <i class="bi bi-sliders"></i>
+            <div class="text"><strong>Προ-επεξεργασία εικόνας:</strong> μαθηματικά φίλτρα, thresholds, ανίχνευση flicker & αλλαγών φωτεινότητας.</div>
+          </li>
+          <li>
+            <i class="bi bi-clipboard-check"></i>
+            <div class="text"><strong>Monitoring & Report:</strong> συνεχής παρακολούθηση και δημιουργία αναφορών.</div>
+          </li>
+          <li>
+            <i class="bi bi-megaphone"></i>
+            <div class="text"><strong>LLM Output:</strong> τελική ειδοποίηση πυρκαγιάς για άμεση ενεργοποίηση πρωτοκόλλων ασφάλειας.</div>
+          </li>
+        </ul>
+      </div>
 
     <div class="hero-wrap">
-      <img class="hero-image hero-ratio hero-rounded" src="assets/bc-hero.jpg" alt="CoDrones demo">
+      <img class="hero-image hero-ratio hero-rounded" src="assets/archiemedes_framework.png" alt="CoDrones demo">
     </div>
   </div>
 
