--- a/energy.html
+++ b/energy.html
@@ -176,7 +176,7 @@
       </div>
 
     <div class="hero-wrap">
-      <img class="hero-image hero-ratio hero-rounded" src="assets/archiemedes_framework.png" alt="CoDrones demo">
+      <img class="hero-image" src="assets/archiemedes_framework.png" alt="CoDrones demo">
     </div>
   </div>
 
