fix: archimedes logo

--- a/energy.html
+++ b/energy.html
@@ -28,7 +28,7 @@
     <a href="https://researchersnight.gr/en/home-page-en/" class="brand-logo-link" target="_blank" aria-label="External Site">
       <img src="assets/24097.jpeg" alt="External Site Logo" class="brand-logo">
     </a>
-
+ 
     <!-- Logo 2 -->
     <a href="index.html" class="brand-logo-link" aria-label="ICSA Group">
       <img src="assets/icsa-logo.png" alt="ICSA Group" class="brand-logo">
@@ -104,7 +104,7 @@
   <div class="section-card">
     <div class="section-inner">
       <div class="section-header">
-        <span class="logo-pill.green">
+        <span class="logo-pill green">
           <img src="assets/archiemedes.png" alt="Archimedes">
           <div class="d-flex flex-column">
             <strong>Archimedes</strong>
