--- a/health.html
+++ b/health.html
@@ -39,6 +39,66 @@
 </div>
 <div class="container py-5">
 
+  <!-- SECTION 3: Pulse -->
+<div class="section-card">
+  <div class="section-inner">
+    <div class="section-header">
+      <span class="logo-pill purple">
+        <img src="assets/pulse.png" alt="Pulse logo">
+        <div class="d-flex flex-column">
+          <strong>Pulse</strong>
+        </div>
+      </span>
+      <h2 class="section-title h3">Stress Prediction Framework</h2>
+    </div>
+  </div>
+
+  <div class="row g-4 align-items-start">
+    <!-- Αριστερά: περιγραφή -->
+    <div class="col-md-7">
+      <p class="lead-compact">
+        Η πλατφόρμα Pulse συνδυάζει πολυαισθητηριακές IoT συσκευές με αλγορίθμους
+        μηχανικής μάθησης για την πρόβλεψη επιπέδων στρες. 
+        Οι μετρήσεις φυσιολογικών και περιβαλλοντικών παραμέτρων αποθηκεύονται
+        σε βάση δεδομένων και επεξεργάζονται μέσω εξειδικευμένων μοντέλων.
+        Τα αποτελέσματα προβάλλονται μέσω e-Learning και gamification modules,
+        ενισχύοντας τη συμμετοχή και την αυτορρύθμιση του χρήστη.
+      </p>
+    </div>
+
+    <!-- Δεξιά: bullets -->
+    <div class="col-md-5">
+      <ul class="feature-list">
+        <li>
+          <i class="bi bi-cpu"></i>
+          <div class="text"><strong>Πολυαισθητηριακή Συσκευή:</strong> περιβαλλοντικές &amp; φυσιολογικές μετρήσεις</div>
+        </li>
+        <li>
+          <i class="bi bi-diagram-3"></i>
+          <div class="text"><strong>Machine Learning:</strong> εξαγωγή χαρακτηριστικών &amp; πρόβλεψη στρες</div>
+        </li>
+        <li>
+          <i class="bi bi-cloud"></i>
+          <div class="text"><strong>Data Layer:</strong> αποθήκευση &amp; επεξεργασία δεδομένων</div>
+        </li>
+        <li>
+          <i class="bi bi-phone"></i>
+          <div class="text"><strong>Mobile App:</strong> προβολή αποτελεσμάτων &amp; αλληλεπίδραση</div>
+        </li>
+        <li>
+          <i class="bi bi-controller"></i>
+          <div class="text"><strong>Gamification &amp; e-Learning:</strong> ενίσχυση συμμετοχής &amp; εκπαίδευση</div>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Εικόνα διαγράμματος -->
+  <div class="hero-wrap">
+    <img class="hero-image hero-ratio hero-rounded" src="assets/pulse_framework.jpeg" alt="Pulse Framework diagram">
+  </div>
+</div>
+
   <!-- SECTION 1: BIOSTREAMS -->
   <div class="section-card">
     <div class="section-inner">
