--- a/health.html
+++ b/health.html
@@ -95,7 +95,7 @@
 
   <!-- Εικόνα διαγράμματος -->
   <div class="hero-wrap">
-    <img class="hero-image hero-ratio hero-rounded" src="assets/pulse_framework.jpeg" alt="Pulse Framework diagram">
+    <img class="hero-image" src="assets/pulse_framework.jpeg" alt="Pulse Framework diagram">
   </div>
 </div>
 
